<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myapp</string>
    <string name="actionBar_settings">Settings</string>
    <string name="contextMenuRemove">Remove Data</string>
     <string name="PreferenceView">DerPref</string>
    <string name="NewItemBtnText">Add New Data</string>
    <string name="firstN">FirstName</string>
    <string name="secondN">SecondName</string>
    <string name="CheckDone">Done?</string>
    <string name="DetailView1">FName</string>
    <string name="DetailView2">SName</string>
    <string name="DetailView3">UDone</string>
    <string name="liDFName">First Name</string>
    <string name="liDLName">Last Name</string>
    <string name="LiDChbx">Are you Done</string>
    <string name="cancelBTN">Cancel</string>
    <string name="addupdateBTN">Add/Update</string>
    <string name="ChangeName">Change the Name</string>
    <string name="Summ">use this setting to change the name of the default value der.</string>
</resources>
