<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:weightSum="1">

    <EditText style="@style/DetailStyle"
            android:text="@string/firstN"
            android:id="@+id/detailTextView1"
            />

    <EditText style="@style/DetailStyle"
            android:text="@string/secondN"
            android:id="@+id/detailTextView2"
            />


    <CheckBox
            style="@style/CheckBoxDStyle"
            android:text="@string/LiDChbx"
            android:id="@+id/chBx1"


           />
    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".37"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            >

        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/cancelBTN"
                android:layout_weight="1"
                android:onClick="cancelData"
                android:id="@+id/button" android:layout_gravity="center_vertical"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/addupdateBTN"
                android:layout_weight="1"
                android:onClick="saveData"
                android:id="@+id/button2" android:layout_gravity="center_vertical"/>
    </LinearLayout>


</LinearLayout>